2002-11-13  Mo DeJong  <mdejong@uncounted.org>

	* db/dbutils.c: Use Win32 version of kill()
	when compiling with VC++ or Mingw.
	* misc/libutils/fileutils.c: Invert test
	so that Cygwin specific code is only
	used when __CYGWIN32__ is defined instead
	of testing for #ifndef __MSVC__. This
	fixes the build under Mingw.
	* parsers/fortran/ftnchek.c: Include
	sys/param.h when HAVE_SYS_PARAM_H is
	defined instead of depending on __MSVC__.

2002-11-13  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.in: Regen.
	* config.h.in: Regen.
	* bitmaps/Makefile.in: Regen.
	* db/Makefile.in: Regen.
	* demo/Makefile.in: Regen.
	* doc/Makefile.in: Regen.
	* doc/html/Makefile.in: Regen.
	* etc/Makefile.in: Regen.
	* etc/sn_toolchains/Makefile.in: Regen.
	* gui/Makefile.in: Regen.
	* hyper/Makefile.am: Add .o target that
	does not use cygpath to support building
	with mingw.
	* hyper/Makefile.in: Regen.
	* misc/Makefile.in: Regen.
	* misc/libutils/Makefile.in: Regen.
	* packages/Makefile.in: Regen.
	* parsers/Makefile.in: Regen.
	* parsers/assembly/Makefile.in: Regen.
	* parsers/chill/Makefile.in: Regen.
	* parsers/cobol/Makefile.in: Regen.
	* parsers/common/Makefile.in: Regen.
	* parsers/cpp/Makefile.in: Regen.
	* parsers/cpp/cpplib/Makefile.in: Regen.
	* parsers/fortran/Makefile.in: Regen.
	* parsers/gcj/Makefile.in: Regen.
	* parsers/java/Makefile.in: Regen.
	* parsers/libjcreuse/Makefile.in: Regen.
	* parsers/m4/Makefile.in: Regen.
	* parsers/python/Makefile.in: Regen.
	* parsers/sendmail/Makefile.in: Regen.
	* parsers/tcl/Makefile.in: Regen.
	* parsers/toolbox/Makefile.in: Regen.
	* sdk/Makefile.in: Regen.
	* sdk/api/Makefile.in: Regen.
	* sdk/api/c/Makefile.in: Regen.
	* sdk/api/c/database/Makefile.in: Regen.
	* sdk/api/c/database/examples/Makefile.in: Regen.
	* sdk/api/tcl/Makefile.in: Regen.
	* sdk/api/tcl/database/Makefile.in: Regen.
	* sdk/api/tcl/database/examples/Makefile.in: Regen.
	* sdk/api/tcl/misc/Makefile.in: Regen.
	* sdk/parsers/Makefile.in: Regen.